<resources>
    <string name="app_name">Pak Tunes</string>

    <string name="artist_photo">Artist Photo</string>
    <string name="artist_name">Artist Name</string>
    <string name="listen_the_latest_musics">Listen The \nLatest Musics</string>
    <string name="your_top_genres">Your top genres</string>
    <string name="popular_podcast_categories">Popular podcast categories</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="category_name">Category Name</string>
    <string name="category_image">Category Image</string>
    <string name="song_title">Song Title</string>
    <string name="song_image">song image</string>
    <string name="songs">Songs</string>
    <string name="artist_description">A renowned Pakistani singer known for his soulful voice and hits in Bollywood and Pakistani music, primarily in the pop genre</string>
    <string name="back_button">back button</string>
    <string name="save_song">save song</string>
    <string name="start_time">00:00</string>
    <string name="end_time">00:00</string>
    <string name="previous_song">previous song</string>
    <string name="next_song">next song</string>
    <string name="skip_backward">skip backward</string>
    <string name="button_play_pause">button Play / Pause</string>
    <string name="skip_forward">skip forward</string>
    <string name="playing">Playing…</string>

</resources>