<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/songThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/song_image"
            android:scaleType="centerCrop"
            android:src="@drawable/musicalbum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/song_title"
        android:textColor="@color/text_colour"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView" />

    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_colour"
        android:text="@string/artist_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvSongTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSongTitle"
        app:layout_constraintTop_toBottomOf="@id/tvSongTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>

